--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@types/node": "18.7.5",
     "@types/react": "16.9.17",
+    "@types/swagger-ui-react": "^4.18.3",
+    "eslint-plugin-jsdoc": "^48.2.0",
     "typescript": "4.6.3"
   }
 }
