--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "mongodb": "^4.8.1",
@@ -14,10 +16,13 @@
     "swagger-ui-react": "^5.11.8"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "18.7.5",
     "@types/react": "16.9.17",
     "@types/swagger-ui-react": "^4.18.3",
     "eslint-plugin-jsdoc": "^48.2.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "4.6.3"
   }
 }
