--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.8.1",
     "next": "latest",
     "next-swagger-doc": "^0.4.0",
@@ -16,7 +18,9 @@
     "swagger-ui-react": "^5.11.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "18.7.5",
     "@types/react": "16.9.17",
     "@types/swagger-ui-react": "^4.18.3",
