--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@types/node": "18.7.5",
     "@types/react": "18.2.67",
     "@types/swagger-ui-react": "^4.18.3",
+    "autoprefixer": "^10.4.19",
     "eslint-plugin-jsdoc": "^48.2.0",
     "jest": "^29.7.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "typescript": "4.6.3"
   }
