--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "engines": {
     "node": "20.x"
@@ -31,6 +33,7 @@
     "eslint-plugin-jsdoc": "^48.2.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "typescript": "4.6.3"
