--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jest": "^29.7.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "typescript": "4.6.3"
